fix(create form): add element button alignment

--- a/src/app/styles/modules/_form-block.less
+++ b/src/app/styles/modules/_form-block.less
@@ -7,5 +7,9 @@
     display: inline-block;
     align-self: flex-end;
     padding: 8px 15px;
+
+    &.small {
+      height: 48px;
+    }
   }
 }
