--- a/src/app/widgets/form-editor/element/editable-form-element.component.less
+++ b/src/app/widgets/form-editor/element/editable-form-element.component.less
@@ -13,7 +13,7 @@
   line-height: 20px;
   border: 2px solid white;
   margin: 0 3px;
-  border-radius: 10px;
+  border-radius: 50%;
 
   &:focus {
     font-size: 20px;
