--- a/src/app/widgets/form-editor/form-editor.component.less
+++ b/src/app/widgets/form-editor/form-editor.component.less
@@ -5,6 +5,7 @@
 
   &:focus {
     font-size: 32px;
+    line-height: 32px;
     border-width: 0;
     transition: .2s;
   }
